kubernetes/services/miniflux/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: miniflux
  labels:
    name: miniflux
    type: content
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
